<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/emailLogin_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:layout_marginTop="40dp"
        android:autofillHints="me@gmail.com"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/passwordLogin_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

    <Button
        android:id="@+id/loginCreateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginTop="20dp"/>


</LinearLayout>