<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/signupEmail_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:layout_marginTop="80dp"
        android:autofillHints="me@gmail.com"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/signupPassword_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_marginTop="40dp"
        android:autofillHints="password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_marginTop="40dp"
        />

</LinearLayout>