<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ChangePasswordActivity">


    <EditText
        android:id="@+id/old_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_old_password"
        android:autofillHints="old password"
        android:inputType="textPassword"
        android:layout_marginTop="90dp"/>

    <EditText
        android:id="@+id/new_password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="new password"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/changePasswordButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:layout_marginTop="40dp"/>

</LinearLayout>